src/pages/BlogPostsByTag.css
.BlogPostsByTag {
    margin-left: 5%;
    margin-right: 5%;
}

.BlogPostsByTag h1 {
    display: flex;
    flex-direction: column;
    flex: 1;
    align-items: center;
    justify-content: center;
    font-family: 'Economica', sans-serif;
    color: #4F6367;
}

.BlogPostsByTag h2 {
    display: flex;
    flex-direction: column;
    flex: 1;
    align-items: center;
    justify-content: center;
    font-family: 'Economica', sans-serif;
    color: #4F6367;
}

.BlogPostsByTag h3 {
    padding-left: 10px;
    padding-right: 10px;
    margin-top: 3px;
    margin-bottom: 2px;
    font-family: 'Economica', sans-serif;
    color: #4F6367;
}

.BlogPostsByTag-page-content {
    display: flex;
}

.BlogPostsByTag-loading h1 {
    display: flex;
    flex-direction: column;
    flex: 1;
    align-items: center;
    justify-content: center;
    font-family: 'Economica', sans-serif;
    color: #4F6367;
}

.BlogPostsByTag-loading p {
    text-align: center;
    font-family: 'Open-sans', sans-serif;
    font-size: 16px;
}

@media screen and (max-width: 600px) {
    .Blog-no-posts {
        width: 100%;
    }
}

@media screen and (min-width: 600px) {
    .Blog-no-posts {
        width: 80%;
    }
}

.BlogPostsByTag-no-posts p {
    text-align: center;
    font-family: 'Open-sans', sans-serif;
    font-size: 16px;
}

@media screen and (max-width: 600px) {
    .BlogPostsByTag-posts {
        display: flex;
        flex-wrap: wrap;
        gap: 10px;
        justify-content: center;
        width: 100%;
    }
}

.BlogPostsByTag-posts {
    display: flex;
    flex-wrap: wrap;
    gap: 10px;
    justify-content: center;
    width: 80%;
}

.BlogPostsByTag-tags {
    width: 100px;
    min-height: 200px;
    padding-left: 25px;
    border-left: 1px solid;
    border-color: #4F6367;
}

